boreal/tests/assets/invalid_files/parsing/jump_range_invalid.yar
rule a {
    strings:
        $a = { AB [5-2] 85 }
    condition:
        $a
}
